other-cel/pdb-maxunavailable/.chainsaw-test/pdb-bad.yaml
apiVersion: policy/v1
kind: PodDisruptionBudget
metadata:
  name: badpdb01
spec:
  maxUnavailable: 0
